ejemplo pagina instituto

--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Probando Git/GitHub</title>
+    <title>Instituto Noa</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
-    <h1>Probando Git/GitHub</h1>
+    <nav id="navbar">
+      <img id="logo-principal" src="logo.png" alt="logo instituto NOA" />
+      <ul id="lista-nav">
+        <li>
+          <a class="link-nav" href="#">Inicio</a>
+        </li>
+        <li>
+          <a class="link-nav" href="#">El Instituto</a>
+        </li>
+        <li>
+          <a class="link-nav" href="#">Cursos</a>
+        </li>
+        <li>
+          <a class="link-nav" href="#">Sedes</a>
+        </li>
+        <li>
+          <a class="link-nav" href="#">Trabaja con Nosotros</a>
+        </li>
+        <li>
+          <a class="link-nav" href="#">Contacto</a>
+        </li>
+      </ul>
+      <button id="boton-nav">Aula Virtual</button>
+    </nav>
+    <div id="imagen-principal">
+      <h1>Capacitate en las Aeas con mas Demanda en el mercado laboral</h1>
+      <button>ver todo cursos</button>
+    </div>
+    <div id="boton-wsp">
+      <i class="bi bi-whatsapp"></i>
+    </div>
   </body>
 </html>
